[JAEGER] Fixed tracer integration illegally re-pushing fp->rval (bug 583124).